--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,20 @@
   line-clamp: 1;
   -webkit-box-orient: vertical;
 }
+
+table.cart-table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.cart-table td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+/* .cart-table tr:nth-child(even) {
+  background-color: #dddddd;
+} */
